<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:geekui="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:windowSoftInputMode="adjustPan" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="10dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp" >

                <TextView
                    android:id="@+id/textheader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="List Detail"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="20sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/line_setting" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp" >

                <com.codefriday.bangkokunitrade.util.TypefaceTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/SurgeryDate"
                    android:textSize="25sp"
                    geekui:customTypeface="fonts/PSLKittithadaProBold.otf" />

                <com.codefriday.bangkokunitrade.util.TypefaceTextView
                    android:id="@+id/textSurgeryDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="...."
                    android:textSize="20sp"
                    geekui:customTypeface="fonts/PSLKittithadaProBold.otf" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp" >

                <com.codefriday.bangkokunitrade.util.TypefaceTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/HN"
                    android:textSize="25sp"
                    geekui:customTypeface="fonts/PSLKittithadaProBold.otf" />

                <com.codefriday.bangkokunitrade.util.TypefaceTextView
                    android:id="@+id/textHN"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="...."
                    android:textSize="20sp"
                    geekui:customTypeface="fonts/PSLKittithadaProBold.otf" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp" >

                <com.codefriday.bangkokunitrade.util.TypefaceTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/RadiocheckTool"
                    android:textSize="25sp"
                    geekui:customTypeface="fonts/PSLKittithadaProBold.otf" />

                <com.codefriday.bangkokunitrade.util.TypefaceTextView
                    android:id="@+id/textTool"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="...."
                    android:textSize="20sp"
                    geekui:customTypeface="fonts/PSLKittithadaProBold.otf" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp" >

                <com.codefriday.bangkokunitrade.util.TypefaceTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/Hospital"
                    android:textSize="25sp"
                    geekui:customTypeface="fonts/PSLKittithadaProBold.otf" />

                <com.codefriday.bangkokunitrade.util.TypefaceTextView
                    android:id="@+id/texthospital"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="...."
                    android:textSize="20sp"
                    geekui:customTypeface="fonts/PSLKittithadaProBold.otf" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp" >

                <com.codefriday.bangkokunitrade.util.TypefaceTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="แพทย์ผู้ผ่าตัด"
                    android:textSize="25sp"
                    geekui:customTypeface="fonts/PSLKittithadaProBold.otf" />

                <com.codefriday.bangkokunitrade.util.TypefaceTextView
                    android:id="@+id/textSurgeryDoctor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="...."
                    android:textSize="20sp"
                    geekui:customTypeface="fonts/PSLKittithadaProBold.otf" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/line_setting" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp" >

                <com.codefriday.bangkokunitrade.util.ExpandableHeightListView
                    android:id="@+id/list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:descendantFocusability="beforeDescendants" >
                </com.codefriday.bangkokunitrade.util.ExpandableHeightListView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="5dp" >

                <Button
                    android:id="@+id/btnchecklist"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:text="ยกเลิก" />

                <Button
                    android:id="@+id/btnSend"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:text="ปิดเคส" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>